MarcoKitTests/TestData/error/object15.marcoConfig
--before
foo {
    a 1
}}

--after
15-16: Whitespace required between object entries
